<resources>
    <string name="app_name">Phoenix4</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_button">ورود</string>
    <string name="activity_home_title">فروشگاه</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Yes">بله</string>
    <string name="No">خیر</string>
    <string name="category_list">لیست دسته بندی ها</string>
    <string name="login">Login</string>
    <string name="get_profile">دریافت اطلاعات کاربر</string>
    <string name="get_categories">دریافت دسته بندی ها از سرور</string>
    <string name="show_notification">نمایش اعلان جدید</string>
    <string name="profile">پروفایل</string>
    <string name="cart">سبد خرید</string>
    <string name="setting">تنظیمات</string>
    <string name="save">ذخیره</string>
    <string name="login_username_hint">نام کاربری شما</string>
    <string name="login_password_hint">کلمه عبور شما</string>
    <string name="login_signup_hint">ثبت نام</string>
    <string name="back">بازگشت</string>
    <string name="profile_name">نام</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="mobile">شماره همراه</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="bio">درباره...</string>
    <string name="address">آدرس</string>
    <string name="edit">ویرایش</string>
</resources>