<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <com.google.android.material.card.MaterialCardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_outer"
                    android:layout_height="@dimen/profile_image_width"
                    android:layout_width="@dimen/profile_image_width"
                    card_view:cardBackgroundColor="@android:color/transparent"
                    card_view:cardCornerRadius="@dimen/profile_image_corner"
                    card_view:cardElevation="3dp" >

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/profileImage"
                        android:layout_height="@dimen/profile_image_width"
                        android:layout_width="@dimen/profile_image_width"
                        android:layout_centerInParent="true"/>
                </com.google.android.material.card.MaterialCardView>


            </RelativeLayout>

            <com.khafonline.phoenix4.component.MyTextView
                android:layout_marginVertical="20dp"
                android:id="@+id/profile_name"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />
            <com.khafonline.phoenix4.component.MyTextView
                android:layout_marginVertical="10dp"
                android:id="@+id/mobile"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />
            <com.khafonline.phoenix4.component.MyTextView
                android:layout_marginVertical="10dp"
                android:id="@+id/email"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />
        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.khafonline.phoenix4.component.MyButton
                android:id="@+id/btn_save"
                android:layout_weight="1"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
            <com.khafonline.phoenix4.component.MyButton
                android:id="@+id/btn_edit_profile"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"/>
            <com.khafonline.phoenix4.component.MyButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/back"/>
        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>