<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="@dimen/nav_header_profile_margin_top"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_outer"
        android:layout_width="@dimen/nav_header_profile_image_width"
        android:layout_height="@dimen/nav_header_profile_image_width"
        android:layout_gravity="right"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="@dimen/nav_header_profile_corner"
        card_view:cardElevation="3dp" >

        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profileImageView"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </com.google.android.material.card.MaterialCardView>






    <com.khafonline.phoenix4.component.MyTextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:text_view_font="IRAN_Sans" />

    <com.khafonline.phoenix4.component.MyTextView
        android:id="@+id/profile_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        app:text_view_font="IRAN_Sans" />
</LinearLayout>