<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:padding="35dp"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/whiteCardColor"
        tools:ignore="MissingConstraints">



        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:text="Login"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextUsername"
                    style="@style/modifiedEditText"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:hint="@string/login_username_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:text="Forgot Password?"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize"
                android:layout_gravity="end"
                android:onClick="viewForgotPAssword"
                android:layout_marginTop="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ProgressBar
                    android:layout_centerInParent="true"
                    android:id="@+id/waiting"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <com.khafonline.phoenix4.component.MyButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:text="@string/login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <TextView
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/login_signup_hint"
                android:onClick="viewRegisterClicked"
                android:layout_marginTop="@dimen/loginViewsMargin"
                tools:ignore="RtlCompat" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>